<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_app"/>

    <TextView
        android:id="@+id/txv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_titulo"
        android:textSize="24dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txv_subtitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_subtitulo"
        android:textSize="15dp"
         android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edt_marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hnt_marca"/>

    <EditText
        android:id="@+id/edt_modelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hnt_modelo"/>

    <EditText
        android:id="@+id/edt_ano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hnt_ano"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"/>

</LinearLayout>